opam-version : "2.0"
name         : "tjr_simple_earley"
version      : "0.0.1"
synopsis     : "Simple Earley-style parser"

maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_simple_earley"
bug-reports  : "https://github.com/tomjridge/tjr_simple_earley/issues"
dev-repo     : "git+https://github.com/tomjridge/tjr_simple_earley.git"

# ----------------------------------------------------------------------

depends: [
  "ocamlfind"
  "dune"
  "ppx_jane"
  "core"  # for profiling, in bin/
  "tjr_profile"  # for profiling, in bin/
  "ppx_include"
#  "tjr_lib"
#  "tjr_profile"
#  "tjr_monad"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]

