opam-version : "2.0"
name         : "tjr_simple_earley_examples"
version      : "0.0.1"
synopsis     : "Simple Earley-style parser (examples)"

maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_simple_earley"
bug-reports  : "https://github.com/tomjridge/tjr_simple_earley/issues"
dev-repo     : "git+https://github.com/tomjridge/tjr_simple_earley.git"

# ----------------------------------------------------------------------

depends: [
  "tjr_simple_earley"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]

