(library
  (public_name tjr_simple_earley)
  (flags (:standard -w -27-8-40-32-39))
;  (wrapped false)
  (preprocess (pps ppx_jane))
;   (modules Misc Prelude Earley_spec Earley_unstaged Earley_base Earley_simple Examples); Earley_base Earley_unstaged ; Impl
  (libraries ppx_jane)
)

; (executable
;   (name example)
;   (flags (:standard -w -27-8-40-32-39))
;   (modules Example)
;   (libraries xxx))
