opam-version: "2.0"
name: "tjr_simple_earley"

# this should match the github tag 
version: "2019-04-15"

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_simple_earley"
bug-reports: "https://github.com/tomjridge/tjr_simple_earley/issues"
dev-repo: "https://github.com/tomjridge/tjr_simple_earley.git"

# ----------------------------------------------------------------------

depends: [
  "ocamlfind"
  "dune"
  "ppx_jane"
  "core"  # for profiling, in bin/
  "tjr_profile"  # for profiling, in bin/
#  "tjr_lib"
#  "tjr_profile"
#  "tjr_monad"
]

# ----------------------------------------------------------------------

build: ["dune" "build" "-p" name "-j" jobs]

